--- a/teste/index.html
+++ b/teste/index.html
@@ -38,7 +38,7 @@
         <span id="displayName">Artur Maverick</span>
         <input type="text" id="nameInput" style="display:none;">
         
-        <i class="fa-solid fa-pen-to-square" id="btnEditName" style="cursor:pointer;"></i>
+        <i class="fa-solid fa-pen-to-square"  style="cursor:pointer; font-size:16px; color: rgb(179, 120, 228);" id="btnEditName" style="cursor:pointer;"></i>
         <button id="btnSaveName" style="display:none;">Salvar</button>
         <button id="btnCancelName" style="display:none;">Cancelar</button>
     </h1>
@@ -53,7 +53,7 @@
     <p>
         <span id="displayDesc">Um explorador curioso em <br> busca de aventuras e novas<br> ideias. Entusiasta de música<br> e café.</span>
         <textarea id="descInput" style="display:none; width:100%; height:80px;"></textarea>
-        <i  class="fa-solid fa-file-pen" id="btnEditDesc" style="cursor:pointer;"></i>
+      <i class="fa-solid fa-note-sticky" id="btnEditDesc" style="cursor:pointer;"></i>
         <button id="btnSaveDesc" style="display:none;">Salvar</button>
         <button id="btnCancelDesc" style="display:none;">Cancelar</button>
     </p>
