--- a/teste/index.html
+++ b/teste/index.html
@@ -51,11 +51,24 @@
 
     <!-- Descrição exibida -->
     <p>
-        <span id="displayDesc">Um explorador curioso em <br> busca de aventuras e novas<br> ideias. Entusiasta de música<br> e café.</span>
-        <textarea id="descInput" style="display:none; width:100%; height:80px;"></textarea>
-      <i class="fa-solid fa-note-sticky" id="btnEditDesc" style="cursor:pointer;"></i>
+       <div class="desc-container">
+    <span id="displayDesc">
+        Um explorador curioso em <br> 
+        busca de aventuras e novas<br> 
+        ideias. Entusiasta de música<br> e café.
+    </span>
+    <textarea id="descInput" style="display:none; width:100%; height:100px;"></textarea>
+    <div class="desc-buttons">
+        <i class="fa-solid fa-note-sticky" id="btnEditDesc"></i>
         <button id="btnSaveDesc" style="display:none;">Salvar</button>
         <button id="btnCancelDesc" style="display:none;">Cancelar</button>
+    </div>
+
+
+
+
+</div>
+
     </p>
 </div>
 
