--- a/teste/index.html
+++ b/teste/index.html
@@ -19,7 +19,7 @@
             <a href="/index.html">Início</a>
             <a href="/Chat.html">Mensagens</a>
             <a href="/Diário Pessoal.html">Diário Pessoal</a>
-            <a href="/Configurações.html">Configurações</a>
+            <a href="/Configuracao.html">Configurações</a>
             <a href="/Ajuda.html">Ajuda</a>
         </div>
         <a href="https://this-person-does-not-exist.com/pt">
@@ -91,7 +91,7 @@
                 <div class="reactions">
                     <button class="like-button"><i class="fa-solid fa-thumbs-up"></i> Curtir</button>
                     <a href="/comentar.html"><button class="comment-button"><i class="fa-solid fa-comment"></i> Comentar</button></a>
-                    <button class="share-button"><i class="fa-solid fa-share"></i> Compartilhar</button>
+                    <a href="/Compartilhar.html"><button class="share-button"><i class="fa-solid fa-share"></i> Compartilhar</button></a>
                 </div>
             </div>
 
